--- a/bootstrap/css/business-frontpage.css
+++ b/bootstrap/css/business-frontpage.css
@@ -12,7 +12,7 @@ body {
 
 .business-header {
     height: 150px;
-    background: url(header_150px.png) center center no-repeat scroll;
+    background: url(header1.png) center center no-repeat scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
